# Basic-Digital-Wallet

./: .gitignore  .testing.env  main.py  pyproject.toml
backend/: config.py  deps.py  main.py  routers.py  security.py
backend/models/: __init__.py  items.py  merchants.py  transaction.py  users.py  wallet.py
backend/routers/: __init__.py  authentication.py  items.py  merchants.py  transaction.py  users.py  wallet.py
old/: models.py
performance-tests/: test_index.py
scripts/: initial-db.py  run-performance-test.bat  run_api.bat
tests/: conftest.py  test_item.py  test_merchant.py  test_transcaction.py  test_wallet.py
