[tool.poetry]
name = "digimon"
version = "0.1.0"
description = ""
authors = ["Nonsenj <oilchattong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
sqlalchemy = {version = "2.0.32", extras = ["asyncio"]}
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
locust = "^2.31.4"
black = "^24.8.0"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
